--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,18 +20,22 @@
   align-items: center;
   padding: 0 4rem;
 }
+
 .navbar a {
   text-decoration: none;
   color: #fbfaff;
 }
+
 .navbar h3 {
   font-size: 20px;
   font-family: 'Montserrat', sans-serif;
 }
+
 .navbag {
   display: flex;
   align-items: center;
 }
+
 .bag-quantity {
   display: flex;
   align-items: center;
@@ -55,29 +59,34 @@
   color: rgb(68, 68, 68);
   min-height: 80vh;
 }
+
 .not-found h2 {
   font-size: 30px;
 }
+
 .not-found p {
   font-size: 20px;
 }
 
 /*Home Page CSS*/
-.home-container{
+.home-container {
   padding: 2rem 4rem;
 }
+
 .home-container h2 {
   font-size: 40px;
   font-weight: 400;
   text-align: center;
 }
-.books{
+
+.books {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 2rem;
 }
-.book{
+
+.book {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -91,35 +100,41 @@
     2px 2px 5px rgba(94, 104, 121, 0.3);
 
 }
-.book h3{
+
+.book h3 {
   font-size: 20px;
   font-weight: 600;
   text-align: center;
 }
-.book img{
+
+.book img {
   width: 80%;
   margin-top: 1rem;
   margin-left: auto;
   margin-right: auto;
-  
+
 }
-.book .details{
+
+.book .details {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items:flex-start;
+  align-items: flex-start;
   font-size: 12px;
 }
-.book .details .author{
+
+.book .details .author {
   font-size: 12px;
 
 }
-.book .details .price{
+
+.book .details .price {
   font-size: 15px;
   font-weight: 700;
 
 }
-.book button{
+
+.book button {
 
   width: 100%;
   height: 40px;
@@ -132,24 +147,29 @@
   outline: none;
   cursor: pointer;
 }
+
 /* Cart css */
 .cart-container {
   padding: 2rem 4rem;
   height: 650px;
 }
+
 .cart-container h2 {
   font-weight: 400;
   font-size: 30px;
   text-align: center;
 }
+
 .cart-container .titles {
   margin: 2rem 0 1rem 0;
 }
+
 .cart-container .titles h3 {
   font-size: 14px;
   font-weight: 400;
   text-transform: uppercase;
 }
+
 .cart-item,
 .cart-container .titles {
   display: grid;
@@ -157,32 +177,40 @@
   grid-template-columns: 3fr 1fr 1fr 1fr;
   column-gap: 0.5rem;
 }
+
 .cart-item {
   border-top: 1px solid rgb(187, 187, 187);
   padding: 1rem 0;
 }
+
 .cart-container .titles .product-title {
   padding-left: 0.5rem;
 }
+
 .cart-container .titles .total {
   padding-right: 0.5rem;
   justify-self: right;
 }
+
 .cart-item .cart-product {
   display: flex;
 }
+
 .cart-item .cart-product img {
   width: 100px;
   max-width: 100%;
   margin-right: 1rem;
 }
+
 .cart-item .cart-product h3 {
   font-weight: 400;
 }
+
 .cart-product p {
   font-weight: 400;
   color: #9063f1;
 }
+
 .cart-item .cart-product button {
   border: none;
   outline: none;
@@ -191,6 +219,7 @@
   background: none;
   color: gray;
 }
+
 .cart-item .cart-product button:hover {
   color: black;
 }
@@ -204,6 +233,7 @@
   border: 0.5px solid rgb(177, 177, 177);
   border-radius: 5px;
 }
+
 .cart-item .cart-product-quantity button {
   border: none;
   outline: none;
@@ -211,9 +241,11 @@
   padding: 0.7rem 1.5rem;
   cursor: pointer;
 }
+
 .cart-item .cart-product-quantity .count {
   padding: 0.7rem 0;
 }
+
 .cart-item .cart-product-total-price {
   padding-right: 0.5rem;
   justify-self: right;
@@ -227,6 +259,7 @@
   border-top: 1px solid rgb(187, 187, 187);
   padding-top: 2rem;
 }
+
 .cart-summary .clear-btn {
   width: 130px;
   height: 40px;
@@ -239,24 +272,29 @@
   outline: none;
   cursor: pointer;
 }
+
 .cart-checkout {
   width: 270px;
   max-width: 100%;
-  
+
 }
+
 .cart-checkout .subtotal {
   display: flex;
   justify-content: space-between;
   font-size: 20px;
 }
+
 .cart-checkout .amount {
   font-weight: 700;
 }
+
 .cart-checkout p {
   font-size: 14px;
   font-weight: 200;
   margin: 0.5rem 0;
 }
+
 .cart-checkout button {
   width: 100%;
   height: 40px;
@@ -274,6 +312,7 @@
 .start-shopping {
   margin-top: 1rem;
 }
+
 .continue-shopping a,
 .start-shopping a {
   color: gray;
@@ -281,10 +320,12 @@
   display: flex;
   align-items: center;
 }
+
 .continue-shopping a span,
 .start-shopping a span {
   margin-left: 0.5rem;
 }
+
 .cart-empty {
   font-size: 20px;
   margin-top: 2rem;
@@ -294,51 +335,65 @@
   align-items: center;
 }
 
-.cart-checkout .cart-login{
-background-color: #461e5c;
-color: white;
+.cart-checkout .cart-login {
+  background-color: #461e5c;
+  color: white;
 }
 
 /* Footer CSS*/
-.main-footer{
+.main-footer {
   color: white;
   background-color: #b28dff;
   bottom: 0;
-  
+
 }
-.footer-content{
+
+.footer-content {
   padding: 2rem;
-  display:block;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    
+  display: block;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
 }
-.footer-content h3{
+
+.footer-content h3 {
   font-family: 'Fasthand', cursive;
   font-size: 25px;
   font-weight: 100;
 }
-.footer-content p{
+
+.footer-content p {
   max-width: 500px;
   margin: 10px auto;
   line-height: 28px;
   font-size: 14px;
   color: white;
 }
-.footer-bottom p{
+
+.footer-bottom p {
   font-size: 14px;
   word-spacing: 2px;
   text-transform: capitalize;
   padding: 4rem 0 2rem 34rem;
 }
 
+/*Admin*/
+.link-active {
+  color: #4b70e2;
+}
+
+.link-inactive {
+  color: rgb(97, 97, 97);
+}
+
 @media screen and (max-width: 800px) {
+
   /*Home Page Responsiveness*/
-  .book{
+  .book {
     margin: 1rem auto;
 
 
   }
-  
+
 }
