--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -430,20 +430,21 @@
 
 .bestList {
 
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 400;
   text-align: center;
+  margin-top: 4px;
 }
 
 .bestseller .link a {
   text-decoration: none;
-  color: black;
+  color: purple;
 }
 
 .bestseller .link a:visited,
 a:active {
   text-decoration: none;
-  color: black;
+  color: rgb(172, 98, 237);
 }
 
 
@@ -454,6 +455,7 @@ a:active {
   justify-content: space-between;
   align-items: flex-start;
   font-size: 12px;
+  line-height: 18px;
 
 }
 
