--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fasthand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
 
 * {
   padding: 0;
@@ -465,6 +467,63 @@ a:active {
   padding: 0px;
   justify-content: center;
   text-align: center;
+}
+
+.sustain h1 {
+  color: #043e16;
+  margin-top: 10px;
+  justify-content: center;
+  text-align: center;
+  font-size: 20px;
+}
+
+.sustain .title {
+  color: rgb(7, 136, 24);
+  font-size: 28px;
+  justify-content: center;
+  text-align: center;
+  font-family: 'Satisfy', cursive;
+
+}
+
+.sustain .ourMotive {
+  margin: 3rem 8rem;
+  padding: 2rem;
+  border-radius: 15px;
+  width: 80%;
+  text-align: justify;
+  max-width: 100%;
+  height: 450px;
+  background-color: #3ea35e26;
+  box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.5),
+    5px 2px 5px rgba(94, 104, 121, 0.3);
+  font-family: 'Sora', sans-serif;
+  line-height: 40px;
+}
+
+.sustain .bookIcon {
+  padding-left: 6px;
+
+}
+
+.sustain h2 {
+  font-size: 24px;
+  justify-content: center;
+  text-align: center;
+}
+
+.sustain .articleLinks {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 1rem 2rem;
+  padding: 1rem;
+  border-radius: 15px;
+  width: 300px;
+  max-width: 100%;
+  height: 200px;
+  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.5),
+    2px 2px 5px rgba(94, 104, 121, 0.3);
 }
 
 @media screen and (max-width: 800px) {
