--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -430,12 +430,14 @@
 
 }
 
-.bestList {
+.bestSeller .nyt {
 
-  font-size: 30px;
-  font-weight: 400;
-  text-align: center;
-  margin-top: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin-top: 2px;
+  width: 35%;
+  height: 35%;
 }
 
 .bestseller .link a {
@@ -506,10 +508,21 @@ a:active {
 
 }
 
+.sustain .bookIcon svg {
+  padding-top: 8px;
+}
+
 .sustain h2 {
   font-size: 24px;
   justify-content: center;
   text-align: center;
+  padding: 10px;
+}
+
+.sustain img {
+  border-radius: 5px;
+  opacity: 0.8;
+  z-index: -1;
 }
 
 .sustain .articleLinks {
@@ -522,8 +535,157 @@ a:active {
   width: 300px;
   max-width: 100%;
   height: 200px;
-  box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.5),
-    2px 2px 5px rgba(94, 104, 121, 0.3);
+  box-shadow: -5px -5px 10px rgba(221, 227, 220, 0.5),
+    2px 2px 5px rgba(36, 102, 16, 0.3);
+}
+
+.sustain .articles {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 15px;
+  box-shadow: -5px -5px 10px rgba(221, 227, 220, 0.5),
+    2px 2px 5px rgba(193, 225, 184, 0.3);
+  margin: 1rem 2rem;
+  padding: 1rem;
+
+
+}
+
+
+.sustain .articleLinks a {
+  text-decoration: none;
+  color: #043e16;
+  font-weight: 600;
+}
+
+.sustain .articleLinks a svg {
+  padding-top: 8px;
+}
+
+.sustain .ourTips {
+  margin: 3rem 8rem;
+  padding: 2rem;
+  font-size: 15px;
+  border-radius: 15px;
+  width: 80%;
+  text-align: justify;
+  max-width: 100%;
+  height: 100%;
+  background-color: #e1f4b975;
+  box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.5),
+    5px 2px 5px rgba(94, 104, 121, 0.3);
+  font-family: 'Sora', sans-serif;
+  line-height: 40px;
+}
+
+.sustain .ourTips h3 {
+  text-align: center;
+  letter-spacing: 0.1cm;
+}
+
+.sustain .ourTips h3 svg {
+  padding-top: 5px;
+}
+
+.sustain .ourTips .subheading {
+  font-weight: 600;
+}
+
+.sustain .packaging {
+  border-radius: 15px;
+  box-shadow: -5px -5px 10px rgba(221, 227, 220, 0.5),
+    2px 2px 5px rgba(193, 225, 184, 0.3);
+  margin: 1rem 6rem;
+  padding: 4rem;
+  line-height: 30px;
+
+  background-color: #3ea35e26;
+
+}
+
+.sustain h2 {
+  font-size: 20px;
+}
+
+
+.sustain .packaging ul {
+  color: rgb(19, 98, 19);
+  text-align: justify;
+  padding: 0 4rem;
+}
+
+.sustain .packaging img {
+  z-index: -1;
+  width: 20%;
+  height: 20%;
+}
+
+.sustain img {
+  width: 100%;
+  height: 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: -1;
+}
+
+.suggestions {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 15px;
+  box-shadow: -5px -5px 10px rgba(221, 227, 220, 0.5),
+    2px 2px 5px rgba(193, 225, 184, 0.3);
+  margin: 1rem 2rem;
+  padding: 1rem;
+}
+
+.suggestions .sugg img {
+  width: 60%;
+  height: 100%;
+
+}
+
+.head {
+  padding: 4px 10px;
+  text-align: center;
+  justify-content: center;
+}
+
+.suggestions .sugg h5 {
+
+  text-align: center;
+  justify-content: center;
+}
+
+.suggestions .sugg {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 1rem 2rem;
+  padding: 1rem;
+  border-radius: 15px;
+  width: 300px;
+  max-width: 100%;
+  height: 250px;
+  box-shadow: -5px -5px 10px rgba(221, 227, 220, 0.5),
+    2px 2px 5px rgba(36, 102, 16, 0.3);
+}
+
+.about h2 {
+  text-align: center;
+  margin: 1rem;
+}
+
+.aboutus {
+  margin: 1rem 8rem;
+  padding: 1rem;
+  border-radius: 15px;
+  width: 1000px;
+  max-width: 100%;
+  height: 100%;
+  box-shadow: -5px -5px 10px rgba(221, 227, 220, 0.5),
+    2px 2px 5px rgba(36, 102, 16, 0.3);
+
 }
 
 @media screen and (max-width: 800px) {
