--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -673,7 +673,7 @@ a:active {
 
 .about h2 {
   text-align: center;
-  margin: 1rem;
+  margin: 1rem 0 0 0;
 }
 
 .aboutus {
@@ -685,8 +685,49 @@ a:active {
   height: 100%;
   box-shadow: -5px -5px 10px rgba(221, 227, 220, 0.5),
     2px 2px 5px rgba(36, 102, 16, 0.3);
+  background-color: #d7c7fb74;
 
 }
+
+.aboutus p {
+  padding: 1rem 4rem 2rem 4rem;
+  text-align: justify;
+  line-height: 2rem;
+}
+
+.aboutus p b {
+  color: #461e5c;
+}
+
+.aboutus img {
+  width: 20%;
+  height: 20%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: -1;
+  border-radius: 50%;
+  box-shadow: -5px -5px 10px rgba(229, 209, 244, 0.5),
+    2px 2px 5px rgba(67, 56, 77, 0.3);
+
+
+}
+
+.contactus {
+  margin: 0 16rem;
+  padding: 4rem;
+  box-shadow: -5px -5px 10px rgba(231, 230, 232, 0.5),
+    2px 2px 5px rgba(67, 56, 77, 0.3);
+  background-color: #e1f4b975;
+
+}
+
+
+
+.contactus h3 {
+  text-align: center;
+}
+
 
 @media screen and (max-width: 800px) {
 
